test fix bg on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -10,7 +10,7 @@
 body {
     background-image: url(../src/imgs/whitemountains.jpg);
     background-size: cover;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
     font-family: 'Roboto',
         sans-serif;
 }
